<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lotWithoutBooks"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_centerInParent="true"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/lotWithoutBookBanner"
        android:layout_width="312dp"
        android:layout_height="224dp"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/without_book_tips"
            android:textSize="19sp"
            android:textColor="#685641" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:paddingRight="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:background="@drawable/book_shelf_without_book_frame" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="22dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingRight="8dp">

                    <LinearLayout
                        android:id="@+id/lotGoFinder"
                        style="@style/without_book_menu_container"
                        android:background="@drawable/book_shelf_without_book_btn_top_selector">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12dp"
                            android:src="@drawable/book_shelf_without_book_finder" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center_vertical">

                            <TextView
                                style="@style/without_book_menu_primary_txt"
                                android:text="@string/without_book_finder_tip1"/>

                            <TextView
                                android:id="@+id/txvFinderTip"
                                style="@style/without_book_menu_secondary_txt"/>

                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/arrow_right" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#eeebe6" />

                    <LinearLayout
                        android:id="@+id/lotGoDetector"
                        style="@style/without_book_menu_container"
                        android:background="@drawable/book_shelf_without_book_btn_bottom_selector">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="12dp"
                            android:src="@drawable/book_shelf_without_book_detector" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:gravity="center_vertical">

                            <TextView
                                style="@style/without_book_menu_primary_txt"
                                android:text="@string/without_book_radar_tip1"/>

                            <TextView
                                style="@style/without_book_menu_secondary_txt"
                                android:text="@string/without_book_radar_tip2"/>

                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/arrow_right" />

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/book_shelf_without_book_wrap_line" />

            </FrameLayout>

        </FrameLayout>

    </LinearLayout>

    <com.vincestyling.ixiaoshuo.ui.WithoutBookStatisticsView
        android:id="@+id/lotBookStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/book_shelf_without_book_bottom_tip" />

</LinearLayout>