<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:vince="http://schemas.android.com/apk/res/com.vincestyling.ixiaoshuo"
              android:id="@+id/linear_detail_header"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:orientation="vertical"
        android:background="@drawable/book_shelf_bg_layer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/book_cover_frame">

                    <ImageView
                        android:id="@+id/imvBookCover"
                        android:layout_width="70dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:id="@+id/txvBookName"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_gravity="bottom"
                            android:gravity="bottom"
                            android:includeFontPadding="false"
                            android:textSize="18sp"
                            android:textColor="#4d4d4d"
                            android:singleLine="true"
                            android:ellipsize="middle" />

                        <TextView
                            android:id="@+id/txvBookStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/red_flag"
                            android:layout_marginLeft="2dp"
                            android:textSize="10sp"
                            android:textColor="#ffffff"
                            android:singleLine="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingTop="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txvBookAuthor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:textSize="13sp"
                                android:textColor="#808080"
                                android:ellipsize="marquee"/>

                            <TextView
                                android:id="@+id/txvBookCategory"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:textSize="13sp"
                                android:textColor="#808080"
                                android:layout_marginTop="7dp"
                                android:layout_marginBottom="7dp"
                                android:ellipsize="marquee"/>

                            <TextView
                                android:id="@+id/txvBookCapacity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:textSize="13sp"
                                android:textColor="#808080"
                                android:ellipsize="marquee"/>

                        </LinearLayout>

                        <Button
                            android:id="@+id/imvBookAnotherType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/book_info_btn_voice_type_selector"
                            android:visibility="gone"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/btnGotoRead"
                    android:layout_width="148dp"
                    android:layout_height="36dp"
                    android:text="@string/read_book"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:background="@drawable/book_info_btn_green_selector" />

                <Button
                    android:id="@+id/btnDownloadAll"
                    android:layout_width="148dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/download_all"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:background="@drawable/book_info_btn_red_selector" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/finder_booklist_divider_layer" />

    </LinearLayout>

    <com.vincestyling.ixiaoshuo.ui.EllipseEndTextView
        android:id="@+id/txvBookSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        vince:textSize="15sp"
        vince:textColor="#2b2b2b"
        vince:maxLines="4"
        vince:lineSpacing="10dp"
        vince:collapseBackground="@drawable/book_info_btn_expand_selector" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="3dp"
        android:background="@drawable/book_info_chapter_bg">

        <Button
            android:id="@+id/btnChapterListReverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_direcotry"
            android:textColor="#724e2b"
            android:textSize="14sp"
            android:drawableRight="@drawable/book_info_chapter_arrow_down"
            android:drawablePadding="5dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:background="@drawable/book_info_chapter_btn_directory_selector" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="#724e2b"
            android:textSize="14sp"
            android:text="@string/last_update_time" />

        <TextView
            android:id="@+id/txvUpdateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="6dp"
            android:textColor="#724e2b"
            android:textSize="14sp"
            android:singleLine="true"
            android:ellipsize="marquee"/>

    </LinearLayout>

</LinearLayout>